fix invisible button

--- a/Vault/070224.css
+++ b/Vault/070224.css
@@ -96,5 +96,6 @@
 
 @media (hover: hover) {
 .btn:hover {
-    /*Add your button hover styles here*/
+    background-color: #FFB6C1;
+    color: white;
 }}
